# Project metadata and package information
[project]
name = "rCradle"
version = "0.1.-"
description = "CLI to create repos"
readme = "README.md"
authors = [{ name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "copier>=9.8.0",
    "rich>=13.7.0",
    "pyyaml==6.0.3"
]

# URLs related to the project
[project.urls]
repository = "https://github.com/jebel-quant/rhiza-init"

# Entry points for command-line scripts
#[project.scripts]
#qcradle = "cradle.cli:main"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch wheel build configuration
[tool.hatch.build.targets.wheel]
packages = ["src/cradle"]

# Hatch build configuration - files to include in the package
#[tool.hatch.build]
#include = [
#    "LICENSE",    # Ensure the LICENSE file is included in your package
#    "README.md",
#    #"demo.png",
#    "src/cradle",
#]

[tool.deptry.package_module_name_map]
pyyaml = ["yaml"]
typer = ["typer"]
copier = ["copier"]
rich = ["rich"]
#marimo = ["marimo"]
#numpy = ["numpy"]
#plotly = ["plotly"]
#pandas = ["pandas"]